--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@clerk/nextjs": "^6.36.5",
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^6.1.0",
+    "@uploadthing/react": "^7.3.3",
     "cheerio": "^1.1.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
