--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@neondatabase/serverless": "^1.0.2",
     "@prisma/client": "^6.1.0",
     "@uploadthing/react": "^7.3.3",
+    "browser-image-compression": "^2.0.2",
     "cheerio": "^1.1.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
