--- a/public/manifest.json
+++ b/public/manifest.json
@@ -40,15 +40,14 @@
     }
   ],
   "share_target": {
-    "action": "/share-target",
-    "method": "POST",
-    "enctype": "application/x-www-form-urlencoded",
-    "params": {
-      "title": "title",
-      "text": "text",
-      "url": "url"
-    }
-  },
+  "action": "/dashboard",
+  "method": "GET",
+  "params": {
+    "title": "title",
+    "text": "text",
+    "url": "url"
+  }
+},
   "categories": ["productivity", "utilities"],
   "shortcuts": [
     {
